[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "SwiftTD"
version = "0.1.5"
description = "SwiftTD: Fast and Robust TD Learning"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{name = "Khurram Javed"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/khurramjaved96/SwiftTD"

[tool.scikit-build]
# Where the pure-Python package lives (create these files below)
wheel.packages = ["src/swifttd"]

[tool.scikit-build.cmake]
minimum-version = "3.21"
